click venture step-3 image width fixed on mobile - test-1.

--- a/docroot/sites/all/themes/ambitious/sass/general.scss
+++ b/docroot/sites/all/themes/ambitious/sass/general.scss
@@ -1395,8 +1395,8 @@ article.node-223806 {
                 width: 80%;
                 margin-left: 10%;
                 @include breakpoint($mobile) {
-                  width:100%;
-                  margin-left: 0;
+                  width:100% !important;
+                  margin-left:0 !important;
                 }
             }
         }
